makefile: change optimization level, .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ runlog.txt
 *.mode1v3
 Documents/dox/online
 Vireo_Web/objs
+Documents/dox/old.online
+sample-vis/Gyro Boy 11_30
+sample-vis/Gyro Boy 12_15
+sample-vis/Gyro Boy Fix2
