--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -57,12 +57,22 @@ endif
 .DEFAULT_GOAL=help
 
 install: esh
-	@sudo cp esh $(PROGRAM_DIR)
+	@username=`whoami`; \
+	if test $$username == "root"; \
+	then \
+	  cp esh $(PROGRAM_DIR); \
+	else \
+	  sudo cp esh $(PROGRAM_DIR); \
+	fi
 	@echo '==> esh installed to $(PROGRAM_DIR)'
 
 clean:
 	rm -f esh libvireo.so $(BIN)/esh *~ $(INCDIR)/*~
 	rm -rf $(OBJDIR)
+
+simple:
+	make esh
+	strip esh
 
 v32:
 	if ! ( [ -a esh ] && [ `file esh | cut -d ' ' -f 3` == "32-bit" ] ); then make clean; fi;
@@ -114,59 +124,6 @@ $(COREOBJS): $(OBJDIR)/%.o: ../source/core/%.cpp
 
 $(IOOBJS): $(OBJDIR)/%.o: ../source/io/%.cpp
 	$(CC) $(CFLAGS) -c -o $@ $<
-
-# Instead of trying fake out make for emscripten just build it explicitly
-# To install the Emscripten SDK https://github.com/kripken/emscripten/wiki
-EM_OPT= -Os
-EMFLAGS= -I$(INCDIR) -DkVireoOS_emscripten $(EM_OPT)
-
-EM_BC_FILES = objs/EggShell.bc\
-    objs/VireoMerged.bc\
-    objs/Thread.bc\
-    objs/TimeTypes.bc\
-    objs/FileIO.bc\
-    objs/CEntryPoints.bc
-
-v-js:
-	make clean
-	mkdir -p objs
-	emcc $(EMFLAGS) ../source/core/VireoMerged.cpp -o objs/VireoMerged.bc
-	emcc $(EMFLAGS) ../source/core/EggShell.cpp -o objs/EggShell.bc
-	emcc $(EMFLAGS) ../source/core/Thread.cpp -o objs/Thread.bc
-	emcc $(EMFLAGS) ../source/core/TimeTypes.cpp -o objs/TimeTypes.bc
-	emcc $(EMFLAGS) ../source/io/FileIO.cpp -o objs/FileIO.bc
-	emcc $(EMFLAGS) ../source/core/CEntryPoints.cpp -o objs/CEntryPoints.bc
-	emcc $(EMFLAGS) ../source/CommandLine/SimpleCountMain.cpp -o objs/SimpleCountMain.bc
-	emcc $(EM_OPT)  objs/SimpleCountMain.bc $(EM_BC_FILES) -o vireo.html
-
-v-eshj:
-	make clean
-	mkdir -p objs
-	emcc $(EMFLAGS) ../source/core/VireoMerged.cpp -o objs/VireoMerged.bc
-	emcc $(EMFLAGS) ../source/core/EggShell.cpp -o objs/EggShell.bc
-	emcc $(EMFLAGS) ../source/core/Thread.cpp -o objs/Thread.bc
-	emcc $(EMFLAGS) ../source/core/TimeTypes.cpp -o objs/TimeTypes.bc
-	emcc $(EMFLAGS) ../source/io/FileIO.cpp -o objs/FileIO.bc
-	emcc $(EMFLAGS) ../source/core/CEntryPoints.cpp -o objs/CEntryPoints.bc
-	emcc $(EMFLAGS) ../source/CommandLine/main.cpp -o objs/main.bc
-	emcc $(EM_OPT)  $(EM_BC_FILES) -o eshj.js
-
-v-jssdl:
-	make clean
-	mkdir -p objs
-	emcc $(EMFLAGS) ../source/core/VireoMerged.cpp -o objs/VireoMerged.bc
-	emcc $(EMFLAGS) ../source/core/EggShell.cpp -o objs/EggShell.bc
-	emcc $(EMFLAGS) ../source/core/Thread.cpp -o objs/Thread.bc
-	emcc $(EMFLAGS) ../source/core/TimeTypes.cpp -o objs/TimeTypes.bc
-	emcc $(EMFLAGS) ../source/io/FileIO.cpp -o objs/FileIO.bc
-	emcc $(EMFLAGS) ../source/io/Sdl3d.cpp -o objs/Sdl3d.bc
-	emcc $(EMFLAGS) ../source/core/CEntryPoints.cpp -o objs/CEntryPoints.bc
-	emcc $(EMFLAGS) ../source/CommandLine/SimpleCountMain.cpp -o objs/SimpleCountMain.bc
-	emcc $(EM_OPT)  objs/SimpleCountMain.bc $(EM_BC_FILES) objs/Sdl3d.bc -s LEGACY_GL_EMULATION=1 -o vireo_sdl.html
-
-
-#emcc $(EM_OPT) $(EM_BC_FILES) -o vireo.html --compression $(EM_DIR)third_party/lzma.js/lzma-native,$(EM_DIR)third_party/lzma.js/lzma-decoder.js,LZMA.decompress
-#emcc $(EM_OPT) $(EM_BC_FILES) -o vireo.js
 
 -include $(DEPS)
 
