--- a/Vireo_Web/Makefile
+++ b/Vireo_Web/Makefile
@@ -42,7 +42,7 @@ help:
 #  -O3 833k / -Os 760k / -Oz 719k
 
 EM_OPT= -O3 -s NO_EXIT_RUNTIME=1
-EMFLAGS= -I$(INCDIR) -DkVireoOS_emscripten $(EM_OPT)
+EMFLAGS= -I$(INCDIR) -DkVireoOS_emscripten -DVIREO_LEAN $(EM_OPT)
 
 EM_EXPORTS = -s EXPORTED_FUNCTIONS="[\
     '_Vireo_Version', \
