Execution: CulDeSac tests modified to enable inlining, rtti & exceptions turned off
CallVI() and Done() were making subroutine call for simple test. Code was simplified.
Now release build are generating inline tests. Pi an PID timing test improved by approx 20%

At one point turning off RTTI and exceptions did not appear to help size any. It does now.
Release Mac builds dropped from 200k to 186k.

--- a/Vireo_Web/Makefile
+++ b/Vireo_Web/Makefile
@@ -41,7 +41,7 @@ help:
 # yielded the following sizes:
 #  -O3 833k / -Os 760k / -Oz 719k
 
-EM_OPT= -O3 -s NO_EXIT_RUNTIME=1
+EM_OPT= -O3 -s NO_EXIT_RUNTIME=1 -fno-exceptions
 EMFLAGS= -I$(INCDIR) -DkVireoOS_emscripten -DVIREO_LEAN $(EM_OPT)
 
 EM_EXPORTS = -s EXPORTED_FUNCTIONS="[\
