--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -58,7 +58,7 @@ else
         # CC=g++
         # clang settings (has been about 33% smaller)
         CC=clang++
-        CFLAGS+= -pthread $(CCOPT) $(TARGETARCH)
+        CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fno-rtti -fno-exceptions
         PROGRAM_DIR=/Applications/Vireo
     endif
 endif
