VireoMicro, Thread:  Fixed up #ifdefs for Thread.h/.cpp initial OSX project for micro
Source allows for conditionally removing all mutex references for simple single thread situations.
Some related XCode project cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Documents/dox/old.online
 sample-vis/Gyro Boy 11_30
 sample-vis/Gyro Boy 12_15
 sample-vis/Gyro Boy Fix2
+Vireo_XCode/VireoEggShell.xcodeproj/project.xcworkspace/xcuserdata
+Vireo_XCode/VireoEggShell.xcodeproj/xcuserdata
