git: aded more ignore settings

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ sample-vis/Gyro Boy 12_15
 sample-vis/Gyro Boy Fix2
 Vireo_XCode/VireoEggShell.xcodeproj/project.xcworkspace/xcuserdata
 Vireo_XCode/VireoEggShell.xcodeproj/xcuserdata
+make-it/build
+source/io/LINX
