gitignore: hide emscripten sdk

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ Vireo_XCode/VireoEggShell.xcodeproj/project.xcworkspace/xcuserdata
 Vireo_XCode/VireoEggShell.xcodeproj/xcuserdata
 make-it/build
 source/io/LINX
+sample-vis/SampleLVNativeMethod/Canvas2D/DerivedData
+sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/project.xcworkspace/xcuserdata
+sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
+Vireo_Web/emsdk_portable
