--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ sample-vis/SampleLVNativeMethod/Canvas2D/DerivedData
 sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/project.xcworkspace/xcuserdata
 sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
 Vireo_Web/emsdk_portable
+Documents/gh-pages
