--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/project.xcworkspace/
 sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
 Vireo_Web/emsdk_portable
 Documents/gh-pages
+test-it/node_modules
